# autonomous-fighter-ai

./: .env.example  .gitignore  README.md  autonomous_fighter_bot.spec  debug_capture_region.py  diagnostic_capture.py  launcher.py  list_windows.py  main.py  requirements.txt  ui_app.py
.github/workflows/: python-ci.yml  ui-ci.yml
api/: __init__.py  run.py  schemas.py  server.py
brain/: __init__.py  action_space.py  env.py  evaluate.py  live_env.py  policy_runtime.py  reward.py  strategy_memory.py  train_ppo.py
brain/learning/: combo_library.json  strategy_state.json
common/: logging_config.py  settings.py
muscles/: CMakeLists.txt  __init__.py  python_wrapper.py
muscles/include/: input_executor.h
muscles/src/: input_executor.cpp
perception/: __init__.py  capture.py  detector.py  pipeline.py  state_extractor.py  visualize.py
scripts/: bootstrap.ps1  calibrate_hud.py  dev-up.ps1  launch-native.ps1  release.ps1  test.ps1
tests/: test_api.py  test_live_env.py  test_main_pressure.py  test_reward.py  test_settings.py  test_state_extractor.py  test_strategy_memory.py
